# plim-chain

./: BOOTSTRAP_ROADMAP.md  CHAIN_SPEC_HARDENING.md  Cargo.toml  Dockerfile  MAINNET_KEYS_BACKUP.md.MOVED  MAINNET_V2_DEPLOY.md  MULTISIG_SUDO_PLAN.md  SECURITY-AUDIT-2026-05-15.md  STATUS.md  TBD_DECISIONS.md  TOKEN_CATALOG.md  chain-manager.sh  chain-spec-dev-raw.json  chain-spec-dev.json  chain-spec-mainnet-raw.json  chain-spec-mainnet-raw.json.MOVED  chain-spec-mainnet-v2-raw.json  chain-spec-mainnet.json  chain-spec-mainnet.json.MOVED  chain-spec-testnet-raw.json  chain-spec-testnet.json  plim-node-mainnet.service  plim-node-testnet.service  plim-node.service
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/plim-channels/: Cargo.toml
pallets/plim-channels/src/: lib.rs
pallets/plim-compliance/: Cargo.toml
pallets/plim-compliance/src/: lib.rs
pallets/plim-delegation/: Cargo.toml
pallets/plim-delegation/src/: lib.rs
pallets/plim-identity/: Cargo.toml
pallets/plim-identity/src/: lib.rs  migrations.rs  mock.rs  tests.rs
pallets/plim-identity/src/migrations/: v1_to_v2_device_attestation.rs
pallets/plim-kyc/: Cargo.toml
pallets/plim-kyc/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-licenses/: Cargo.toml
pallets/plim-licenses/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-mandates/: Cargo.toml
pallets/plim-mandates/src/: lib.rs
pallets/plim-marketplace/: Cargo.toml
pallets/plim-marketplace/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-mesh-relay/: Cargo.toml
pallets/plim-mesh-relay/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/plim-oracle/: Cargo.toml
pallets/plim-oracle/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-payments/: Cargo.toml
pallets/plim-payments/src/: lib.rs  migrations.rs  mock.rs  tests.rs
pallets/plim-payments/src/migrations/: v1_to_v2_origin_transport.rs
pallets/plim-reputation/: Cargo.toml
pallets/plim-reputation/src/: lib.rs
pallets/plim-royalties/: Cargo.toml
pallets/plim-royalties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-rwa/: Cargo.toml
pallets/plim-rwa/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/plim-timestamps/: Cargo.toml
pallets/plim-timestamps/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
