[package]
name = "plim-runtime"
description = "P:L:I:M:/Protocol runtime — Substrate L1 for AI agent payments."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }
pallet-aura.workspace = true
pallet-assets = { workspace = true, default-features = false }
pallet-balances.workspace = true
pallet-nfts = { workspace = true, default-features = false }
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-multisig.workspace = true
pallet-timestamp.workspace = true
pallet-plim-identity.workspace = true
pallet-plim-payments.workspace = true
pallet-plim-mandates.workspace = true
pallet-plim-channels.workspace = true
pallet-plim-delegation.workspace = true
pallet-plim-compliance.workspace = true
pallet-plim-reputation.workspace = true
pallet-plim-timestamps.workspace = true
pallet-plim-licenses.workspace = true
pallet-plim-marketplace.workspace = true
pallet-plim-royalties.workspace = true
pallet-plim-oracle.workspace = true
pallet-plim-kyc.workspace = true
pallet-rwa.workspace = true
pallet-plim-mesh-relay.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }
hex-literal = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-nfts/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-multisig/std",
	"pallet-timestamp/std",
	"pallet-plim-identity/std",
	"pallet-plim-payments/std",
	"pallet-plim-mandates/std",
	"pallet-plim-channels/std",
	"pallet-plim-delegation/std",
	"pallet-plim-compliance/std",
	"pallet-plim-reputation/std",
	"pallet-plim-timestamps/std",
	"pallet-plim-licenses/std",
	"pallet-plim-marketplace/std",
	"pallet-plim-royalties/std",
	"pallet-plim-oracle/std",
	"pallet-plim-kyc/std",
	"pallet-rwa/std",
	"pallet-plim-mesh-relay/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-plim-identity/runtime-benchmarks",
	"pallet-plim-payments/runtime-benchmarks",
	"pallet-plim-mandates/runtime-benchmarks",
	"pallet-plim-channels/runtime-benchmarks",
	"pallet-plim-delegation/runtime-benchmarks",
	"pallet-plim-compliance/runtime-benchmarks",
	"pallet-plim-reputation/runtime-benchmarks",
	"pallet-plim-timestamps/runtime-benchmarks",
	"pallet-plim-licenses/runtime-benchmarks",
	"pallet-plim-marketplace/runtime-benchmarks",
	"pallet-plim-royalties/runtime-benchmarks",
	"pallet-plim-oracle/runtime-benchmarks",
	"pallet-plim-kyc/runtime-benchmarks",
	"pallet-rwa/runtime-benchmarks",
	"pallet-plim-mesh-relay/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-plim-identity/try-runtime",
	"pallet-plim-payments/try-runtime",
	"pallet-plim-mandates/try-runtime",
	"pallet-plim-channels/try-runtime",
	"pallet-plim-delegation/try-runtime",
	"pallet-plim-compliance/try-runtime",
	"pallet-plim-reputation/try-runtime",
	"pallet-plim-timestamps/try-runtime",
	"pallet-plim-licenses/try-runtime",
	"pallet-plim-marketplace/try-runtime",
	"pallet-plim-royalties/try-runtime",
	"pallet-plim-oracle/try-runtime",
	"pallet-plim-kyc/try-runtime",
	"pallet-rwa/try-runtime",
	"pallet-plim-mesh-relay/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
